--- a/src/scss/global/_window.scss
+++ b/src/scss/global/_window.scss
@@ -301,6 +301,11 @@ input[type='radio']::after {
   color: colors.$c-readied;
 }
 
+.hallmark {
+  font-weight: 900;
+  color: colors.$c-amber;
+}
+
 .not-readied {
   color: colors.$c-not-readied;
 }
@@ -310,6 +315,7 @@ input[type='radio']::after {
     scrollbar-color: var(--sdm-scrollbar-thumb) transparent;
     --button-focus-outline-color: var(--sdm-scrollbar-thumb);
     // --button-hover-background-color: var(--sdm-scrollbar-thumb);
+    --color-warm-1: var(--sdm-scrollbar-thumb);
     --color-warm-2: var(--sdm-scrollbar-thumb);
   }
 
