--- a/templates/item/trait/header.hbs
+++ b/templates/item/trait/header.hbs
@@ -2,7 +2,28 @@
   <img class='profile-img' src='{{item.img}}' data-edit='img' data-action='onEditImage' data-tooltip='{{item.name}}' />
   <div class='header-fields mt-10'>
     <div class='document-name'>
-      <input name='name' class="resource-label" type='text' value='{{item.name}}' placeholder='Name' />
+      <div class="flexrow flex-between">
+        <input name='name' class="resource-label flexultra" type='text' value='{{item.name}}' placeholder='Name' />
+        {{#if (eq system.type 'power')}}
+        <div class="flex flex-group-center flexcol rollable" data-action="toggleIsHallmark" style="cursor:pointer;">
+          <label class='resource-label'>{{localize 'SDM.HallmarkItem'}}</label>
+          <i class="fa-regular fa-star mt-5 {{#if item.system.is_hallmark}}hallmark{{/if}}"></i>
+        </div>
+        {{/if}}
+      </div>
+    </div>
+    <div class='grid grid-2col'>
+      {{#if item.system.is_hallmark}}
+      <div class='resource'>
+        <label class='resource-label'>{{localize 'SDM.FieldLevel'}}
+          <input type='text' name='system.hallmark.level' value='{{system.hallmark.level}}' data-dtype='Number' />
+        </label>
+      </div>
+      <div class='resource'>
+        <label class='resource-label'>{{localize 'SDM.FieldExperience'}}</label>
+        <input type='text' name='system.hallmark.experience' value='{{system.hallmark.experience}}' />
+      </div>
+      {{/if}}
     </div>
   </div>
 </header>
