--- a/templates/actor/character/header.hbs
+++ b/templates/actor/character/header.hbs
@@ -244,7 +244,7 @@
                   class="ability-score" data-dtype='Number'
                   data-tooltip="{{localize 'SDM.AbilityCurrent' ability=(localize (lookup @root.config.abilities key))}}" />
                 <div class='flexrow'>
-                  <i class="fa-solid {{lookup @root.config.abilitySaveIcons key}} saveIcon sdm-icon"></i>
+                  <i class="fa-solid {{lookup @root.config.abilitySaveIcons key}} saveIcon"></i>
                 </div>
               </div>
               {{else}}
