feat: :sparkles: Allow gms to extract powers from an album of power

--- a/templates/actor/caravan/header.hbs
+++ b/templates/actor/caravan/header.hbs
@@ -30,7 +30,7 @@
 
          <div class="grid-span-1 resource" data-tooltip="
               <span><b>{{toPascalCase (localize 'SDM.UnitCash')}}:</b> {{localize 'SDM.CashSymbol'}}{{system.total_cash}}</span><br/>
-              <span><b>{{localize 'SDM.TabInventory'}}:</b> {{localize 'SDM.CashSymbol'}}{{system.inventory_value}}</span><hr>
+              <span><b>{{localize 'SDM.TabCaravanInventory'}}:</b> {{localize 'SDM.CashSymbol'}}{{system.inventory_value}}</span><hr>
               <span><b>{{toPascalCase (localize 'SDM.Total')}}:</b> {{localize 'SDM.CashSymbol'}}{{system.wealth}}</span>
             ">
           <label for="system.total_cash" class='resource-label'>
