feat: :sparkles: Allow users to add bonus hero dice when modifying a roll

--- a/templates/actor/character/header.hbs
+++ b/templates/actor/character/header.hbs
@@ -15,7 +15,7 @@
         <div class="flexcol flex-group-center mb-12">
         {{else}}
         <div class="flexcol flex-group-center mb-12 rollable" data-context='rollable'
-          data-action='heroicHealing'>
+          data-action='heroicHealing' data-tooltip="{{localize 'SDM.HeroDiceHealingTip'}}">
         {{/if}}
           <label class='resource-label rollable'>{{localize 'SDM.FieldHeroDice'}}</label>
           <div class='resource-content flexrow height-32 rollable'>
