--- a/css/sdm.css
+++ b/css/sdm.css
@@ -1319,17 +1319,13 @@ input[type=radio]::after {
   flex: 0 0 100px;
   justify-content: flex-end;
 }
-.sdm .items-list .item-controls a {
-  font-size: 12px;
-  text-align: center;
-  margin: 0 6px;
-}
-.sdm .items-list .item-controls-small {
-  display: flex;
+.sdm .items-list .item-controls.controls-2 {
   flex: 0 0 50px;
-  justify-content: flex-end;
 }
-.sdm .items-list .item-controls-small a {
+.sdm .items-list .item-controls.controls-1 {
+  flex: 0 0 25px;
+}
+.sdm .items-list .item-controls a {
   font-size: 12px;
   text-align: center;
   margin: 0 6px;
