--- a/templates/item/gear/header.hbs
+++ b/templates/item/gear/header.hbs
@@ -72,12 +72,32 @@
   <header>
     <div class='grid grid-3col'>
     {{#if (ne item.system.size.unit 'cash')}}
-      <div class="resource">
-        <label class='resource-label'>{{localize 'SDM.ItemGearType'}}</label>
+      <div class="resource ">
+        <label class='resource-label '>{{localize 'SDM.ItemGearType'}}</label>
         <select id='gearType' name='system.type' class="resource-content">
           {{selectOptions config.gearType localize=true selected=system.type sort=true blank='TYPE.Gear'}}
         </select>
       </div>
+
+      {{#if (eq item.system.type '')}}
+
+      <div class="resource align-center">
+        <label class='resource-label'>{{localize 'SDM.GearStartingKit'}}</label>
+        <div class='resource-content align-center'>
+          <input type='checkbox' name='system.starting_kit' {{checked system.starting_kit}} />
+        </div>
+      </div>
+
+        {{#if item.system.starting_kit}}
+        <div class="resource">
+          <label class='resource-label'>{{localize 'SDM.GearStartingKitRemainingItems'}}</label>
+          <div class='resource-content'>
+            <input type='text' name='system.packed_remaining_items' value='{{system.packed_remaining_items}}' data-dtype='Number' disabled/>
+          </div>
+        </div>
+        {{/if}}
+
+      {{/if}}
 
       {{#if (eq item.system.type 'weapon')}}
       <div class='resource'>
