--- a/src/scss/sdm.scss
+++ b/src/scss/sdm.scss
@@ -17,6 +17,7 @@
   @include meta.load-css('components/forms');
   @include meta.load-css('components/resource');
   @include meta.load-css('components/items');
+  @include meta.load-css('components/boxes');
   @include meta.load-css('components/effects');
   @include meta.load-css('components/sheet');
   // // Exemplo de uso de mixins com namespace
