--- a/src/scss/utils/_typography.scss
+++ b/src/scss/utils/_typography.scss
@@ -1,5 +1,7 @@
 :root {
   --sdm-font-primary: 'Baron Neue';
+  //--sdm-font-tab: 'Source Sans Pro', sans-serif;
+  // --sdm-font-tab: 'Roboto Condensed', sans-serif;
   --sdm-font-secondary: 'Alegreya', sans-serif;
   --sdm-font-dice: 'Our Golden Age';
   --sdm-font-tab: 'Bebas Neue', sans-serif;
