--- a/src/scss/components/_items.scss
+++ b/src/scss/components/_items.scss
@@ -62,6 +62,7 @@
     text-align: left;
     align-items: center;
     display: flex;
+    line-height: normal;
     h3,
     h4 {
       margin: 0;
@@ -107,6 +108,7 @@
         margin-right: 5px;
         position: relative;
         display: inline-block;
+        line-height: normal;
       }
 
       .item-image img {
